--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         }
         .container {
             display: flex;
+            flex-direction: column;
             max-width: 1000px;
             margin: 20px auto;
             padding: 20px;
@@ -28,18 +29,14 @@
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
-        .content {
-            flex: 1;
-        }
-        .image {
-            flex: 1;
+        .content, .image {
             padding: 20px;
             text-align: center;
         }
         .image img {
-            max-width: 70%; /* Adjust image size */
-            display: block;
-            margin: 0 auto 20px; /* Center image */
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 20px;
         }
         .image p {
             font-size: 150%; /* Adjust text size */
@@ -75,23 +72,29 @@
             padding: 10px 20px;
             border-radius: 4px;
             cursor: pointer;
-            margin-right: 40%;
         }
         input[type="submit"]:hover {
             background-color: #0056b3;
         }
 
         #phone1{
-            font-size:x-large;
+            font-size: x-large;
         }
 
-        @media (max-width: 768px) {
+        @media (min-width: 768px) {
             .container {
-                flex-direction: column;
+                flex-direction: row;
             }
-            .image,
-            .content {
-                width: 100%;
+            .content, .image {
+                flex: 1;
+                text-align: left;
+            }
+            .image {
+                padding: 20px 40px;
+            }
+            input[type="submit"] {
+                margin: 20px auto; /* Center the submit button */
+                display: block;
             }
         }
     </style>
