--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
             text-align: center;
         }
         .container {
-            display: flex;
-            flex-direction: column;
             max-width: 1000px;
             margin: 20px auto;
             padding: 20px;
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            direction: rtl; /* Ensure right-to-left direction */
+            text-align: right; /* Align text to the right */
         }
+
         .content, .image {
             padding: 20px;
             text-align: center;
@@ -42,8 +43,15 @@
             font-size: 150%; /* Adjust text size */
             margin: 0; /* Reset margin */
         }
-        h1, h2, h3 {
+        h2, h3 {
             margin-top: 0;
+            text-align: right;
+        }
+        h1{
+            margin-top: 0;
+        }
+        .first{
+            text-align: right;
         }
         p {
             line-height: 1.6;
@@ -52,7 +60,7 @@
             margin-top: 30px;
         }
         label {
-            display: block;
+            display:flex;
             margin-bottom: 5px;
         }
         input[type="text"],
@@ -73,6 +81,9 @@
             border-radius: 4px;
             cursor: pointer;
         }
+        #second{
+            text-align: center;
+        }
         input[type="submit"]:hover {
             background-color: #0056b3;
         }
@@ -83,7 +94,8 @@
 
         @media (min-width: 768px) {
             .container {
-                flex-direction: row;
+                display: flex;
+                flex-direction: row; /* Change to row for larger screens */
             }
             .content, .image {
                 flex: 1;
@@ -107,10 +119,10 @@
     <div class="container">
         <div class="content">
             <h2>אינך יכול לעמוד בחום? מזל שהגעת למקום הנכון!</h2>
-            <p>אצלנו תמצאו שירות מקצועי לכל סוגי מזגני האלקטרה והתדיראן - מפוצלים, עיליים ומיני מרכזיים. הצוות המנוסה שלנו מתמחה בתיקון מזגנים ישנים, החלפת חלקים, כיוונון וביצוע שירות שנתי.</p>
+            <p class="first">אצלנו תמצאו שירות מקצועי לכל סוגי מזגני האלקטרה והתדיראן - מפוצלים, עיליים ומיני מרכזיים. הצוות המנוסה שלנו מתמחה בתיקון מזגנים ישנים, החלפת חלקים, כיוונון וביצוע שירות שנתי.</p>
             
             <h3>מה אנו מציעים:</h3>
-            <ol>
+            <ol class="first">
                 <li>תיקון מזגני אלקטרה ותדיראן - מפוצלים, עיליים ומיני מרכזיים</li>
                 <li>התקנת מזגנים מיני מרכזיים חדשים</li>
                 <li>ניקוי יסודי ותחזוקה מונעת לשמירה על תקינות המזגנים</li>
@@ -134,7 +146,7 @@
         </div>
         <div class="image">
             <img src="mazgan.jpeg" alt="שירותי מיזוג אוויר">
-            <p>נשמח לספק לכם שירות מקצועי!</p>
+            <p id="second">נשמח לספק לכם שירות מקצועי!</p>
         </div>
     </div>
 </body
