--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <body>
     <header>
         <h1>שירותי מיזוג אוויר במרכז הארץ</h1>
-        <p id="phone1">פנו אלי לכל שאלה או יעוץ נהוראי כהן - <a href="tel:0526739036">0526739036</a></p>
+        <p id="phone1">פנו אלי לכל שאלה או יעוץ: נהוראי כהן - <a href="tel:0526739036">0526739036</a></p>
     </header>
     <div class="container">
         <div class="content">
